--- a/frontend/nest-client/angular.json
+++ b/frontend/nest-client/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "project_name": {
+    "nest-client": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/project_name",
+            "outputPath": "dist/nest-client",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -64,10 +64,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "project_name:build:production"
+              "buildTarget": "nest-client:build:production"
             },
             "development": {
-              "buildTarget": "project_name:build:development"
+              "buildTarget": "nest-client:build:development"
             }
           },
           "defaultConfiguration": "development"
