--- a/frontend/nest-client/package.json
+++ b/frontend/nest-client/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.3",
     "express": "^4.18.2",
+    "primeng": "^17.18.11",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
@@ -31,16 +32,9 @@
     "@angular-devkit/build-angular": "^18.2.3",
     "@angular/cli": "^18.2.3",
     "@angular/compiler-cli": "^18.2.0",
-    "@eslint/js": "^9.13.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
-    "angular-eslint": "18.4.0",
-    "eslint": "^9.13.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.6.0",
     "globals": "^15.11.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
@@ -49,7 +43,6 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "3.3.3",
-    "typescript": "~5.5.2",
-    "typescript-eslint": "8.10.0"
+    "typescript": "~5.5.2"
   }
 }
