--- a/frontend/nest-client/package.json
+++ b/frontend/nest-client/package.json
@@ -22,6 +22,10 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.3",
+    "@ngneat/elf": "^2.5.1",
+    "@ngneat/elf-cli-ng": "^1.0.0",
+    "@ngneat/elf-devtools": "^1.3.0",
+    "@ngneat/elf-entities": "^5.0.2",
     "express": "^4.18.2",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.11",
