--- a/frontend/nest-client/package.json
+++ b/frontend/nest-client/package.json
@@ -7,8 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:nest-client": "node dist/nest-client/server/server.mjs",
-    "lint": "ng lint"
+    "serve:ssr:nest-client": "node dist/nest-client/server/server.mjs"
   },
   "private": true,
   "dependencies": {
@@ -35,6 +34,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.3",
+    "@angular-eslint/schematics": "^18.4.0",
     "@angular/cli": "^18.2.3",
     "@angular/compiler-cli": "^18.2.0",
     "@types/express": "^4.17.17",
